@@ -41,6 +41,7 @@ Release 0.9.8
 - add build scripts (and other changes) to build a full ZenMagick release that
   already contains all file and SQL patches; also, the sideboxes are defaulted
 	as for zencart's classic theme
+- ZMFormBean renamed to ZMFormData and moved to mvc
 
 Release 0.9.7
 - add ZMProductAssociation service and related code
